--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blankapp",
+  "name": "app_planeja",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Naiara Duarte",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -54,5 +54,5 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "App planeja 3 INFO"
 }
